# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-01-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5627] 7arte.net plugin with weird characters on actors field

2006-01-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Main treeview being populated twice on startup. Fixed.

2006-01-04 Piotr Ozarowski <ozarow@gmail.com>
	* AnimeDB plugin works again

2006-01-03 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed bad vol./col. ID in ComboBox after adding new entry

2006-01-02 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5999] Encoding problem with E-Pipoca movie plugin

2005-12-28 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed crash when volume or collection name wasn't string
	
2005-12-28 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Proprietary unicode font used on PDF reports replaced with a free one (DejaVu)
	* Some changes to simple list PDF export plugin

2005-12-27 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added spanish translation (thanks to Daniel Ucero)

2005-12-05 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed aspell related problems

2005-11-30 Piotr Ozarowski <ozarow@gmail.com>
	* XML template updated (HTML export plugin)

---- 0.5.1 ----

2005-11-26 Piotr Ozarowski <ozarow@gmail.com>
	* Updated polish translation

2005-11-22 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a new czech movie plugin (CSFD - esko-Slovensk Filmov Databze) - Thanks to Blondak <blondak@neser.cz>

2005-11-21 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added Czech translation (Thanks to Blondak <blondak@neser.cz>)
	* [Bug #5684] About window doesn't work on windows
	* [Bug #5683] Two filters not working at all on windows
	* Added a win32 installer custom image.
	* Added portuguese, polish, german and czech translations to win32 installer.

2005-11-21 Piotr Ozarowski <ozarow@gmail.com>
	* Added simple style to table template (HTML export plugin)
	* [Bug #5686] Coll. & vol. remembers selection after adding a movie
	* [Bug #5631] wrong language/locale with 0.5
