@@ -13,7 +13,7 @@ plugin_url = "www.ofdb.de"
 plugin_language = _("German")
 plugin_author = "Christian Sagmueller"
 plugin_author_email = ""
-plugin_version = "0.1"
+plugin_version = "0.2"
 
 class Plugin(movie.Movie):
     def __init__(self, id):
@@ -23,16 +23,16 @@ class Plugin(movie.Movie):
         self.url = "http://www.ofdb.de/view.php?page=film&fid=" + str(self.movie_id)
         
     def picture(self):
-        self.picture_url = "http://www.ofdb.de/" + gutils.trim(self.page,"""<td><!-- Linke Spalte -->
-	<table border="0" cellspacing="0" cellpadding="0">
-	<tr valign="top">
-	<td>
-	  <img src=\"""","\"")
-        
+        self.picture_url = "http://www.ofdb.de/images/film/" + gutils.trim( self.page, "<img src=\"images/film/", "\"" )
+#        self.picture_url = "http://www.ofdb.de/" + gutils.trim(self.page,"""<td><!-- Linke Spalte -->
+#	<table border="0" cellspacing="0" cellpadding="0">
+#	<tr valign="top">
+#	<td>
+#	  <img src=\"""","\"")
     def original_title(self):
         self.original_title = string.capwords(gutils.trim(self.page,"""Originaltitel:</font></td>
             <td>&nbsp;&nbsp;</td>
-            <td><font face="Arial,Helvetica,sans-serif" size="2" class="Daten"><b>""","<") )
+            <td width="99%"><font face="Arial,Helvetica,sans-serif" size="2" class="Daten"><b>""","<") )
     
     def title(self):
         self.title = self.original_title
@@ -46,8 +46,7 @@ class Plugin(movie.Movie):
         self.director = string.capwords(gutils.after(self.director,">"))
         
     def plot(self):
-        self.plot = gutils.trim(self.page,"<b class=\"ch\">Plot","<a href=\"/rg/title-tease/plot")
-        self.plot = gutils.after(self.plot,":</b> ")
+        self.plot = gutils.trim(self.page,"<b>Inhalt:</b>", "<")
         
     def year(self):
         self.year = gutils.trim(self.page,"""Erscheinungsjahr: 
