@@ -4,6 +4,12 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes
 
+
+2006-01-06 Vasco Nunes <vasco.m.nunes@gmail.com>
+	* German OFDB (Online-Filmdatenbank) movie plugin updated. (Christian Sagmueller)
+	* German translation updated. (Christian Sagmueller)
+	* Portuguese translation updated.
+
 2006-01-05 Vasco Nunes <vasco.m.nunes@gmail.com>
 	* [Bug #5627] 7arte.net plugin with weird characters on actors field
 
